--- a/manifests/n8n-deployment.yaml
+++ b/manifests/n8n-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: n8n
-          image: n8nio/n8n:1.48.0
+          image: n8nio/n8n:stable
           ports:
             - containerPort: 5678
           env:
