--- a/manifests/n8n-deployment.yaml
+++ b/manifests/n8n-deployment.yaml
@@ -55,4 +55,4 @@ spec:
             - name: NODE_FUNCTION_ALLOW_EXTERNAL
               value: "parse5,cheerio,lodash,axios,dayjs"
             - name: N8N_INSECURE_DISABLE_WEBHOOK_IFRAME_SANDBOX
-              value: false
+              value: "false"
